@@ -244,6 +244,7 @@ common.cancel=Cancel
 common.caption.diff=diff
 common.caption.experimental=experimental
 common.caption.history=history
+common.caption.universaledit=Click to edit {0}
 common.caption.view=View
 common.change=Change
 common.continue=Continue
