@@ -33,6 +33,10 @@
 <c:if test="${!empty pageInfo.canonicalUrl}">
 	<link rel="canonical" href="${pageInfo.canonicalUrl}" />
 </c:if>
+<c:if test="${!empty pageInfo.topicEditLink}">
+	<%-- see http://universaleditbutton.org/ --%>
+	<link rel="alternate" type="application/x-wiki" title="<fmt:message key="common.caption.universaledit"><fmt:param><c:out value="${pageInfo.topicName}" /></fmt:param></fmt:message>" href="<jamwiki:link value="${pageInfo.topicEditLink}" />"/>
+</c:if>
 <jamwiki:enabled property="PROP_RSS_ALLOWED">
 	<%-- This RSS link is automatically recognized by (some) browsers --%>
 	<link rel="alternate" type="application/rss+xml" title="<c:out value="${pageInfo.RSSTitle}" /> (<c:out value="${virtualWiki}"/>): <fmt:message key="recentchanges.rss.feed1" />" href="<jamwiki:link value="Special:RecentChangesFeed"/>" />
