@@ -18,6 +18,8 @@ New Features:
     weight topic names more heavily than topic content to improve accuracy.
     Existing JAMWiki installs should rebuild their search index using the
     tools on the Special:Maintenance page.
+  * Add support for the universal edit button plugin.  See 
+    http://universaleditbutton.org for further details.
   * Add RankingAlgorithm search engine support (nnagarajayya).
   * Limit the number of recent changes loaded by the "Reload Recent Changes"
     task on the Special:Maintenance page to improve performance.
